feat: add toaster on errors
