# server/docs/swagger.json
@@ -286,11 +286,25 @@
                 }
             }
         },
+        "models.PublicKey": {
+            "type": "object",
+            "properties": {
+                "g": {
+                    "type": "integer"
+                },
+                "p": {
+                    "type": "integer"
+                },
+                "y": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
                 "publicKey": {
-                    "type": "string"
+                    "$ref": "#/definitions/models.PublicKey"
                 },
                 "userId": {
                     "type": "string"
